--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Visit my Guthub https://github.com/saifrehman945</p>
+<p>Visit my Github https://github.com/saifrehman945</p>
 </body>
 </html>
